--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,92 @@
+html, body {
+    height: 100%;
+    width: 100%;
+    background-color: #f6f6f6;
+  }
+li a {
+    margin: auto;
+    display: flex;
+}
+a{
+    padding-left: 15px;
+    padding-right: 15px;
+    text-decoration: none;
+    color: black;
+}
+.social-img{
+    margin: auto;
+}
 .main-nav{
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
-    background-color: grey;
-    color: white;
+    background-color: #f6f6f6;
+    height: auto;
+    margin: auto;
+}
+.socialListItem{
+    flex: 1 1 0%;
+}
+.socialList{
+    background-color: white;
+    display: flex;
+}
+.projects{
+    margin: auto;
+    width: 90%;
+    text-align: center;
+}
+li{
+    list-style-type: none;
+}
+nav{
+    border-bottom: 1px #e1e1e1 solid;
+    width: 90%;
+    background-color: white;
+    height: auto;
+    font-size: 16px;
+    margin: auto;
+    display: flex;
+}
+.left-nav{
+    display: flex;
+}
+.right-nav{
+    margin-left: auto;
+    display: flex;
+    margin-left: auto;
+}
+.child-div-left{
+    font-size: x-large;
+    width: 50%;
+    z-index: 2;
+    position: absolute;
+    left: 12%;
+    padding-top: 10%;
+}
+.child-div-right{
+    z-index: 1;
+    position: absolute;
+    right: 12%;
+}
+.outer{
+    padding-bottom: 50px;
+    width: 100%;
+    height: 100%;
+}
+.parent-div{
+    width: 100%;
+    height: 100%;
+    position: relative;
+    height: max-content;
 }
 .main-content{
+    box-shadow: 2px 5px 9px #e1e1e1;
+    border-bottom-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    padding-top: 15px;
     display: flex;
-    width: 85%;
-    background-color: black;
+    width: 90%;
+    background-color: white;
     margin: auto;
+    height: 100%;
 }
 .left-content{
     width: 50%;
@@ -16,13 +94,10 @@
 }
 .right-content{
     width: 50%;
-    background-color: purple;
+    border-left: black solid;
+    
 }
-
 footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
     width: 100%;
     background-color: grey;
     color: white;
