--- a/css/styles.css
+++ b/css/styles.css
@@ -24,14 +24,22 @@ a{
 .socialListItem{
     flex: 1 1 0%;
 }
+.project-item{
+    padding: 20px;
+    box-shadow: 2px 5px 9px #e1e1e1;
+    flex: 1 1 0%;
+}
 .socialList{
+    border-bottom: 1px #e1e1e1 solid;
+    border-top: 1px #e1e1e1 solid;
     background-color: white;
     display: flex;
 }
-.projects{
+.project-container{
     margin: auto;
     width: 90%;
     text-align: center;
+    display: flex;
 }
 li{
     list-style-type: none;
