--- a/css/styles.css
+++ b/css/styles.css
@@ -25,23 +25,29 @@ a{
     flex: 1 1 0%;
 }
 .project-item{
-    padding: 20px;
     box-shadow: 2px 5px 9px #e1e1e1;
-    flex: 1 1 0%;
+    flex: 1 10%;
+    background-color: white;
 }
+
+.project-container {
+    margin: auto;
+    width: 90%;
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+  }
+  .project-container>* {
+      flex: 0 0 50%;
+  }
+
 .socialList{
     border-bottom: 1px #e1e1e1 solid;
     border-top: 1px #e1e1e1 solid;
     background-color: white;
     display: flex;
 }
-.project-container{
-    margin: auto;
-    width: 90%;
-    text-align: center;
-    display: flex;
-    padding-bottom: 25px;
-}
+
 li{
     list-style-type: none;
 }
