--- a/css/styles.css
+++ b/css/styles.css
@@ -25,8 +25,12 @@ a{
     flex: 1 1 0%;
 }
 .project-item{
-    box-shadow: 2px 5px 9px #e1e1e1;
     flex: 1 10%;
+}
+.project-contents{
+    width: 98%;
+    height: 98%;
+    box-shadow: 2px 5px 9px #e1e1e1;
     background-color: white;
 }
 
@@ -148,9 +152,10 @@ footer {
   /* Add a background color and some padding around the form */
   .container {
     margin: auto;
-    width: 40%;
+    margin-top: 25px;
+    width: 90%;
     background-color: white;
     text-align: center;
     box-shadow: 2px 5px 9px #e1e1e1;
-    padding: 20px;
   }
+  
